src/objects/ManagementTeam__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Management Team</relationshipLabel>
        <relationshipName>ManagementTeam</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientRole__c</fullName>
        <label>Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientTeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Management Team (Client Team Member)</relationshipLabel>
        <relationshipName>Management_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>IF(NOT(ISBLANK( TeamMember__c )), TeamMember__r.pse__Salesforce_User__r.Email, 
IF(NOT(ISBLANK( ClientTeamMember__c )), ClientTeamMember__r.pse__Salesforce_User__r.Email, 
IF(NOT(ISBLANK( VendorTeamMember__c )), VendorTeamMember__r.pse__Salesforce_User__r.Email, &apos;&apos;) 
))</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <formula>IF(NOT(ISBLANK( TeamMember__c )), TeamMember__r.OrganizationString__r.Name, 
IF(NOT(ISBLANK( ClientTeamMember__c )), ClientTeamMember__r.OrganizationString__r.Name, 
IF(NOT(ISBLANK( VendorTeamMember__c )), VendorTeamMember__r.OrganizationString__r.Name, &apos;&apos;) 
))</formula>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>IF(NOT(ISBLANK( TeamMember__c )), TeamMember__r.pse__Salesforce_User__r.Phone, 
IF(NOT(ISBLANK( ClientTeamMember__c )), ClientTeamMember__r.pse__Salesforce_User__r.Phone, 
IF(NOT(ISBLANK( VendorTeamMember__c )), VendorTeamMember__r.pse__Salesforce_User__r.Phone, &apos;&apos;) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamMemberName__c</fullName>
        <formula>IF(NOT(ISBLANK( TeamMember__c )), TeamMember__r.FirstName &amp; &apos; &apos; &amp; TeamMember__r.LastName, 
    IF(NOT(ISBLANK( ClientTeamMember__c )), ClientTeamMember__r.FirstName &amp; &apos; &apos; &amp; ClientTeamMember__r.LastName,
       IF(NOT(ISBLANK(  VendorTeamMember__c  )), VendorTeamMember__r.FirstName &amp; &apos; &apos; &amp; VendorTeamMember__r.LastName, &apos;&apos;) 
 ))</formula>
        <label>Team Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamMemberRole__c</fullName>
        <formula>IF(NOT(ISBLANK( TeamMember__c )),  Role__c , 
IF(NOT(ISBLANK( ClientTeamMember__c )), ClientRole__c, 
IF(NOT(ISBLANK( VendorTeamMember__c )), VendorRole__c, &apos;&apos;) 
))</formula>
        <label>Team Member Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Management Team</relationshipLabel>
        <relationshipName>ManagementTeamContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>IF(NOT(ISBLANK( TeamMember__c )), TeamMember__r.pse__Salesforce_User__r.Title, 
IF(NOT(ISBLANK( ClientTeamMember__c )), ClientTeamMember__r.pse__Salesforce_User__r.Title, 
IF(NOT(ISBLANK( VendorTeamMember__c )), VendorTeamMember__r.pse__Salesforce_User__r.Title, &apos;&apos;) 
))</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorRole__c</fullName>
        <label>Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorTeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Management Team (Vendor Team Member)</relationshipLabel>
        <relationshipName>Management_Team1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Management Team</label>
    <nameField>
        <displayFormat>MT-{0}</displayFormat>
        <label>Management Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Management Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>